--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,7 +1,7 @@
 $widthCardNarrow: 400px
 $widhtCardWide: 960px
-$backGrColor: #e9e6d3
-$backGrColorHover: #f6f2de
+$backGrColor: #f6f2de
+$backGrColorHover: #e9e6d3
 
 #map
   position: absolute
